# Elect

./: .gitmodules  CMakeLists.txt  README.md  elect.yaml
example/: elect_election_c.c  elect_redis_server.c
include/elect/: config.h  learner.h  message.h  network.h  paxos_msg.pb.h  proposer.h  proposer_state.h  write_session.h
src/algorithm/: acceptor.cc  acceptor.h  c.cc  c.h  elect.cc  elect.h  learner.cc  learner.h  paxos_lease.cc  paxos_lease.h  proposer.cc
src/config/: config.cc  config.h
src/message/: message.cc  message.h  paxos_msg.pb.cc  paxos_msg.pb.h  paxos_msg.proto
src/network/: network.cc  network.h  read_session.cc  read_session.h  write_session.cc  write_session.h
src/state/: acceptor_state.cc  acceptor_state.h  learner_state.cc  learner_state.h  proposer_state.cc  proposer_state.h
src/test/: CMakeLists.txt  acceptor_state_test.cc  config_test.cc  learner_state_test.cc  network_test.cc  paxos_lease_test.cc  proposer_state_test.cc
src/util/: util.cc  util.h
